# cpp_book_code

./: .gitignore  CONTRIBUTING.md  README.md
chapter_1/: README.md  example  example.cpp  mnist_fc  mnist_fc.cpp  simd_demo.cpp  welcome_from_cuda.cu
chapter_10/: README.md  benchmark_student_vs_baseline.cpp  cuda_graph_capture_demo.cpp  device_utils.h  fp16_torchscript_demo.cpp  infer_torchscript.cpp  micro_batcher_demo.cpp  onnx_int8_demo.cpp  onnx_loader_demo.cpp  onnx_session_options_demo.cpp  parity_check.cpp  pruned_torchscript_demo.cpp  tinynet.h  trace_and_save_ts.cpp
chapter_11/: README.md  acceptance.yaml  cuda_check_macro_demo.cu  fixed_bin_histogram_psi.cpp  metrics_tracing_demo.cpp  micro_batcher_debug_demo.cpp  observability_utils.h  repro_pack_and_sentinels_demo.cpp  structured_logging_demo.cpp
chapter_12/: README.md  cohort_quality.hpp  log.hpp  metrics.hpp  metrics_server.cpp  observability_demo.cpp  p95_demo.cpp  quality.hpp  quality_monitor_demo.cpp  trace.hpp
chapter_13/: README.md  explainability.hpp  gradcam_demo.cpp  lime_shap_demo.cpp
chapter_2/: README.md  armadillo_scaling_demo.cpp  autoencoder_demo.cpp  autoencoder_libtorch_demo.cpp  backward_fill_example.cpp  bert_onnx_demo.cpp  bigdata_demo.cpp  binary_encoding_demo.cpp  differencing_demo.cpp  embedding_encode_demo.cpp  exponential_smoothing_demo.cpp  fft_demo.cpp  (+32 more)
chapter_2/data_pipeline/: CMakeLists.txt  custom_dataset_demo  custom_dataset_demo.cpp
chapter_2/data_pipeline/build_ch2/: custom_dataset_demo
data_pipeline_caffe2/: CMakeLists.txt  README.md  caffe2_normalize_demo.cpp
(+21 files in other folders)
